--- a/css/style.css
+++ b/css/style.css
@@ -38,12 +38,16 @@ a:hover{
 }
 #sec2{
     background: #fc84a2;
+    padding: 10px;
 }
 .loko{
     background: white;
-    padding: 10px;
+    padding: 20px;
+    margin-top: 10px;
+    border-radius: 10px;
 }
 .loko img{
     border-radius: 100%;
     overflow: hidden;
+    padding: 30px !important;
 }
